--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-# MONGO_URI = "mongodb+srv://yaswanthsetty4:Y@$h@#5061807@cluster0.ms8ii.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+# MONGO_URI = "mongodb+srv://yaswanthsetty4:@cluster0.ms8ii.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET_KEY=your_secret_key
